python/scl/_bindings/permutation.py

"""
Auto-generated Python bindings for permutation

Source: scl/binding/c_api/permutation.h
Generated by: generate_bindings.py

DO NOT EDIT - This file is automatically generated.
"""

from __future__ import annotations

from ctypes import (
    CFUNCTYPE,
    POINTER,
    Structure,
    c_bool,
    c_char,
    c_char_p,
    c_double,
    c_float,
    c_int,
    c_int8,
    c_int16,
    c_int32,
    c_int64,
    c_long,
    c_longlong,
    c_short,
    c_size_t,
    c_ssize_t,
    c_ubyte,
    c_uint,
    c_uint8,
    c_uint16,
    c_uint32,
    c_uint64,
    c_ulong,
    c_ulonglong,
    c_ushort,
    c_void_p,
    c_wchar_p,
)
from typing import Any, Optional

from .._loader import get_library

# Load the native library
_lib = get_library()


# ===========================================================================
# Functions
# ===========================================================================

# C: int scl_perm_correlation_test(const scl_real_t * x, const scl_real_t * y, int n, double observed_correlation, int n_permutations, scl_real_t * p_value, unsigned long seed)
_lib.scl_perm_correlation_test.argtypes = [POINTER(c_double), POINTER(c_double), c_int, c_double, c_int, POINTER(c_double), c_ulong]
_lib.scl_perm_correlation_test.restype = c_int

def scl_perm_correlation_test(x, y, n, observed_correlation, n_permutations, p_value, seed):
    """
    Args:
        x: const scl_real_t *
        y: const scl_real_t *
        n: int
        observed_correlation: double
        n_permutations: int
        p_value: scl_real_t *
        seed: unsigned long
    
    Returns:
        int
    """
    return _lib.scl_perm_correlation_test(x, y, n, observed_correlation, n_permutations, p_value, seed)


# C: int scl_perm_fdr_correction_bh(const scl_real_t * p_values, int n, scl_real_t * q_values)
_lib.scl_perm_fdr_correction_bh.argtypes = [POINTER(c_double), c_int, POINTER(c_double)]
_lib.scl_perm_fdr_correction_bh.restype = c_int

def scl_perm_fdr_correction_bh(p_values, n, q_values):
    """
    Args:
        p_values: const scl_real_t *
        n: int
        q_values: scl_real_t *
    
    Returns:
        int
    """
    return _lib.scl_perm_fdr_correction_bh(p_values, n, q_values)


# C: int scl_perm_fdr_correction_by(const scl_real_t * p_values, int n, scl_real_t * q_values)
_lib.scl_perm_fdr_correction_by.argtypes = [POINTER(c_double), c_int, POINTER(c_double)]
_lib.scl_perm_fdr_correction_by.restype = c_int

def scl_perm_fdr_correction_by(p_values, n, q_values):
    """
    Args:
        p_values: const scl_real_t *
        n: int
        q_values: scl_real_t *
    
    Returns:
        int
    """
    return _lib.scl_perm_fdr_correction_by(p_values, n, q_values)


# C: int scl_perm_bonferroni_correction(const scl_real_t * p_values, int n, scl_real_t * adjusted)
_lib.scl_perm_bonferroni_correction.argtypes = [POINTER(c_double), c_int, POINTER(c_double)]
_lib.scl_perm_bonferroni_correction.restype = c_int

def scl_perm_bonferroni_correction(p_values, n, adjusted):
    """
    Args:
        p_values: const scl_real_t *
        n: int
        adjusted: scl_real_t *
    
    Returns:
        int
    """
    return _lib.scl_perm_bonferroni_correction(p_values, n, adjusted)


# C: int scl_perm_holm_correction(const scl_real_t * p_values, int n, scl_real_t * adjusted)
_lib.scl_perm_holm_correction.argtypes = [POINTER(c_double), c_int, POINTER(c_double)]
_lib.scl_perm_holm_correction.restype = c_int

def scl_perm_holm_correction(p_values, n, adjusted):
    """
    Args:
        p_values: const scl_real_t *
        n: int
        adjusted: scl_real_t *
    
    Returns:
        int
    """
    return _lib.scl_perm_holm_correction(p_values, n, adjusted)


# C: int scl_perm_count_significant(const scl_real_t * p_values, int n, double alpha, scl_size_t * n_significant)
_lib.scl_perm_count_significant.argtypes = [POINTER(c_double), c_int, c_double, POINTER(c_int)]
_lib.scl_perm_count_significant.restype = c_int

def scl_perm_count_significant(p_values, n, alpha, n_significant):
    """
    Args:
        p_values: const scl_real_t *
        n: int
        alpha: double
        n_significant: scl_size_t *
    
    Returns:
        int
    """
    return _lib.scl_perm_count_significant(p_values, n, alpha, n_significant)


# C: int scl_perm_get_significant_indices(const scl_real_t * p_values, int n, double alpha, scl_index_t * indices, int max_results, scl_size_t * n_results)
_lib.scl_perm_get_significant_indices.argtypes = [POINTER(c_double), c_int, c_double, POINTER(c_int64), c_int, POINTER(c_int)]
_lib.scl_perm_get_significant_indices.restype = c_int

def scl_perm_get_significant_indices(p_values, n, alpha, indices, max_results, n_results):
    """
    Args:
        p_values: const scl_real_t *
        n: int
        alpha: double
        indices: scl_index_t *
        max_results: int
        n_results: scl_size_t *
    
    Returns:
        int
    """
    return _lib.scl_perm_get_significant_indices(p_values, n, alpha, indices, max_results, n_results)


# C: int scl_perm_batch_test(struct scl_sparse_matrix * matrix, const scl_index_t * group_labels, int n_permutations, scl_real_t * p_values, unsigned long seed)
_lib.scl_perm_batch_test.argtypes = [POINTER(c_void_p), POINTER(c_int64), c_int, POINTER(c_double), c_ulong]
_lib.scl_perm_batch_test.restype = c_int

def scl_perm_batch_test(matrix, group_labels, n_permutations, p_values, seed):
    """
    Args:
        matrix: struct scl_sparse_matrix *
        group_labels: const scl_index_t *
        n_permutations: int
        p_values: scl_real_t *
        seed: unsigned long
    
    Returns:
        int
    """
    return _lib.scl_perm_batch_test(matrix, group_labels, n_permutations, p_values, seed)


# ===========================================================================
# Exports
# ===========================================================================

__all__ = [
    "scl_perm_batch_test",
    "scl_perm_bonferroni_correction",
    "scl_perm_correlation_test",
    "scl_perm_count_significant",
    "scl_perm_fdr_correction_bh",
    "scl_perm_fdr_correction_by",
    "scl_perm_get_significant_indices",
    "scl_perm_holm_correction",
]